--- a/HRMS/Views/Attendance/EmployeeAttendanceModifyList.cshtml
+++ b/HRMS/Views/Attendance/EmployeeAttendanceModifyList.cshtml
@@ -211,7 +211,7 @@
                     </div>
                     <div class="row m-3" @*id="disbledtextbox"*@>
                         <div class="col-lg-12 col-12 col-sm-12 text-start formTitle">
-                            <div class="form-group">
+                            <div class="form-group" style="display:none">
 
                                 <input type="text" id="attendance_Id" class="form-control" readonly />
                                 <input type="text" id="employee_id" class="form-control" readonly />
@@ -249,7 +249,7 @@
                     </div>
                     <div class="row m-3" @*id="disbledtextbox"*@>
                         <div class="col-lg-12 col-12 col-sm-12 text-start formTitle">
-                            <div class="form-group">
+                            <div class="form-group" style="display:none">
 
                                 <input type="text" id="rejattendance_Id" class="form-control" readonly />
                                 <input type="text" id="rejemployee_id" class="form-control" readonly />
@@ -290,7 +290,7 @@
                     </div>
                     <div class="row m-3" @*id="disbledtextbox"*@>
                         <div class="col-lg-12 col-12 col-sm-12 text-start formTitle">
-                            <div class="form-group">
+                            <div class="form-group " style="display:none">
 
                                 <input type="text" id="accleaveemployee_id" class="form-control" readonly />
                                 <input type="text" id="accleave_id" class="form-control" readonly />
@@ -328,7 +328,7 @@
                     </div>
                     <div class="row m-3" @*id="disbledtextbox"*@>
                         <div class="col-lg-12 col-12 col-sm-12 text-start formTitle">
-                            <div class="form-group">
+                            <div class="form-group" style="display:none">
 
                                 <input type="text" id="rjleaveemployee_id" class="form-control" readonly />
                                 <input type="text" id="rjleave_id" class="form-control" readonly />
