--- a/HRMS/Views/Master/employee_master.cshtml
+++ b/HRMS/Views/Master/employee_master.cshtml
@@ -3,6 +3,7 @@
     ViewData["Title"] = "Employee Master";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<link href="~/css/card.css" rel="stylesheet" />
 <style>
 </style>
 <form asp-controller="Master" asp-action="employee_master" method="post">
